# starknet-remix-plugin

./: .dockerignore  .gitignore  .gitmodules  .hintrc  CODEOWNERS  Dockerfile  DockerfileApiServer  DockerfileDevnet  DockerfileRocket  FEATURES.md  README.md  cairo_upgrade.sh  casm.json  install.sh  package-lock.json  package.json  run.sh  sierra.json  sweep.yaml  temp
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-deploy.yml  artifactory-test.yml  build-and-deploy-remix.yml  build-and-push-api.yml  build-apiserver.yml  check-scarb-version.yml  codeql-analysis.yml  deploy-api  deploy-apiserver.yml  deploy-remix.yml  devnet-deploy.yml  mdbook.yml  prod-build-and-deploy.yml  remix-deploy.yml  (+4 more)
api/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  analyse.py  docker_run.sh  example.env  log.txt  nohup.out
api/cairo_compilers/: build.sh
api/compiled_cairo_artifacts/: contract.json
api/configs/: grafana-logs.config.river  grafana-logs.config.yaml
api/contracts/artifacts/: a.json
api/scripts/: deploy.js
api/src/: cors.rs  errors.rs  handlers.rs  main copy.rs  main.rs  metrics.rs  rate_limiter.rs  tracing_log.rs  types.rs  worker.rs
api/src/handlers/: allowed_versions.rs  cairo_version.rs  cairo_versions.rs  compile.rs  compile_casm.rs  compile_sierra.rs  mod.rs  multi_test.rs  process.rs  save_code.rs  scarb_compile.rs  scarb_test.rs  scarb_version.rs  types.rs  utils.rs  verify.rs
api/src/utils/: lib.rs
docs/: book.toml
examples/: erc_20.cairo  erc_20.casm  erc_20.json  example-provider.json  minimal.casm  minimal.json  setter.cairo  setter.casm  setter.json
old-docs/: CONTRIBUTING.md
plugin/: .env  .env.development  .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  log.txt  nohup.out  package.json  pnpm-lock.yaml  postcss.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.mts  vite.config.ts
scarb-test/: Scarb.toml
src/: App.tsx
(+278 files in other folders)
