[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand = "0.8"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "0.2"
log = "0.4.20"
env_logger = "0.10.0"
crossbeam = "0.8.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures = "0.3.28"
crossbeam-queue = "0.3.8"
crossbeam-skiplist = "0.1.1"
fmt = "0.1.0"
