[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3.17", features=["env-filter", "json", "registry", "smallvec"]}
tracing-appender = "0.2"
tracing-log = "0.1.3"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
crossbeam-queue = "0.3.8"
crossbeam-skiplist = "0.1.1"
fmt = "0.1.0"
thiserror = "1.0.50"
chrono = "0.4.31"